src/pages/Main/main.module.scss
/* ... */
@media (min-width: 1200px) {
    .hero{
        &__content {
            span {
                font-size: 28px;
                line-height: 32px;
            }
    
            h1 {
                font-size: 100px;
                line-height: 100px;
            }
    
            p {
                font-size: 28px;
                line-height: 32px;
                max-width: 500px;
            }
        }
    }
}

@media (max-width: 1366px) and (max-height: 500px) {
    .hero {
        min-height: 400px;
    }
}

@media (max-width: 1200px) {
    .project {
        width: calc(50% - 10px);
    }

    .skills {
        &__items {
            grid-template-columns: repeat(2, 1fr);
        }
    }
}

@media (max-width: 1024px) {
    .hero {
        &__mause {
            display: none;
        }
    }
}

@media (max-width: 900px) {
    .skills {
        &__container {
            display: block;
        }

        &__image {
            width: 100%;
            max-width: 400px;
            margin: 0 auto;
        }

        &__items {
            width: 100%;
            grid-template-columns: repeat(3, 1fr);

            .icon {
                width: calc(60vw / 7);
                height: calc(60vw / 7);
            }
        }

        &__text {
            width: 100%;
        }
    }
}

@media (max-width: 768px) {
    .skills {
        &__items {
            grid-template-columns: repeat(2, 1fr);
        }
    }
}

@media (max-width: 724px) {
    .projects {
        &__items {
            flex-direction: column;
            gap: 40px;
        }
    }

    .project {
        width: 80%;

        &:nth-child(odd) {
            align-self: flex-start;
        }

        &:nth-child(even) {
            align-self: flex-end;

            h5 {
                text-align: right;
            }

            & .project__links {
                flex-direction: row-reverse;
                justify-content: end;
            }
        }

    }

    .skills {
        &__items {
            grid-template-columns: repeat(2, 1fr);

            .icon {
                width: calc(70vw / 7);
                height: calc(70vw / 7);
            }
        }
    }
}

@media (max-width: 700px) {
    .hero {
        padding-top: 80px;
        display: block;
        text-align: left;
        
        &__container {
            text-align: center;
            padding-top: 80px;
            margin-bottom: 80px;
        }

        &__content {
            margin-bottom: 20px;

            span {
                font-size: 20px;
                line-height: 20px;
            }

            h1 {
                font-size: 50px;
                line-height: 50px;
            }

            p {
                max-width: 325px;
                width: 100%;
                font-size: 20px;
                line-height: 26px;
            }
        }

        &__img1 {
            position: static;
            transform: translateY(0);
        }

        &__img1 {
            width: 50vw;
        }

        &__img2 {
            top: 80%;
            width: 40vw;
        }
    }

    .project {
        width: 85%;
    }
}

@media (max-width: 500px) {
    .skills {
        &__items {
            display: block;
        }

        &__item, &__item:hover {
            border:  1px solid $primary-background;
    
            &:hover p , p {
                display: block; /* Вернуть обычный блочный тип */
                -webkit-box-orient: initial;
                -webkit-line-clamp: unset; /* Убирает ограничение строк */
                overflow: visible; /* Убирает скрытие текста */
                text-overflow: clip; /* Убирает многоточие */
                max-height: none; /* Убирает ограничение по высоте */
                width: calc(100% + 2px);
                padding: 0 20px 20px 20px;
                border-left: 1px solid $primary-background;
                border-right: 1px solid $primary-background;
                border-bottom: 1px solid $primary-background;
                position: static;
                padding: 0;
            }
        }
    }
}

@media (max-width: 425px) {
    .projects{
        &__items {
            gap: 30px;
        }
    }

    .project {
        width: 100%;

        &:nth-child(even) {
            align-self: flex-start;

            h5 {
                text-align: left;
            }

            & .project__links {
                flex-direction: row;
                justify-content: start;
            }
        }
    }
}

@media (max-width: 425px) {
    .projects {
        padding: $padding-section-mobile;

        h3 {
            margin-bottom: 30px;
        }
    }

    .project {
        h5 {
            font-size: $font-size-lg-xl;
            line-height: calc($font-size-lg-xl + 10px);
        }
    }
}

